final version part two
