# src/auth/authRoute.js
@@ -1,0 +1,6 @@
+const router = require("express").Router();
+const authController = require("./authController");
+
+router.post("/login", authController.loginController);
+
+module.exports = router;
