# src/routes/charactersRoute.js
@@ -7,29 +7,38 @@ const {
 
 const characterController = require('../controllers/charactersController');
 
-route.get('/characters', characterController.findcharacterController);
+route.get('/characters', characterController.findCharacterController);
 
 route.get(
   '/character/:id',
   validId,
-  characterController.findcharacterByIdController,
+  characterController.findCharacterByIdController,
 );
 
 route.post(
   '/create',
   validObjectBody,
-  characterController.createcharacterController,
+  characterController.createCharacterController,
 );
 route.put(
   '/update/:id',
   validId,
   validObjectBody,
-  characterController.updatecharacterController,
+  characterController.updateCharacterController,
 );
 route.delete(
   '/delete/:id',
   validId,
-  characterController.deletecharacterController,
+  characterController.deleteCharacterController,
 );
+
+
+route.get("/search",
+characterController.searchCharactersController);
+
+
+
+
+
 
 module.exports = route;
