# swagger.json
@@ -20,11 +20,119 @@
     }
   ],
   "paths": {
+    "/users/create": {
+      "post": {
+        "summary": "Criar um novo usuário",
+        "description": "Rota responsável por criar um novo usuário",
+        "tags": [
+          "Users"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "Users": {
+                  "value": {
+                    "name": "Mário Gonçalves",
+                    "username": "mariogoncalves",
+                    "email": "mgoncalves@gmail.com",
+                    "password": "12345",
+                    "photo": "https://img.freepik.com/vetores-premium/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "summary": "Buscar todos os usuários",
+        "description": "Rota responsável por buscar todos os usuários",
+        "tags": [
+          "Users"
+        ],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "summary": "Entrar na API do Rick and Morty",
+        "description": "Rota responsável fazer o login de um user cadastrado",
+        "tags": [
+          "Auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "email": "email@gmail.com",
+                    "password": "12345"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/characters": {
       "get": {
         "summary": "Lista de todos os personagens",
         "description": "Rota responsável por listar todos personagens cadastrados",
-        "tags": ["Characters"],
+        "tags": [
+          "Characters"
+        ],
         "responses": {
           "404": {
             "description": "Not Found"
@@ -49,7 +157,9 @@
       "get": {
         "summary": "Busca uma personagem pelo ID",
         "description": "Rota responsável por buscar uma personagem pelo ID",
-        "tags": ["Characters"],
+        "tags": [
+          "Characters"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -80,7 +190,9 @@
       "post": {
         "summary": "Cadastrar um personagem",
         "description": "Rota responsável por cadastrar um novo personagem",
-        "tags": ["Characters"],
+        "tags": [
+          "Characters"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -121,7 +233,9 @@
       "put": {
         "summary": "Editar um personagem pelo ID",
         "description": "Rota responsável por editar um personagem pelo ID",
-        "tags": ["Characters"],
+        "tags": [
+          "Characters"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -170,7 +284,9 @@
       "delete": {
         "summary": "Apagar um personagem pelo ID",
         "description": "Rota responsável por apagar um personagem pelo ID",
-        "tags": ["Characters"],
+        "tags": [
+          "Characters"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -188,6 +304,42 @@
           }
         }
       }
+    }, "/character/search": {
+      "get": {
+        "summary": "Buscar persongem por nome",
+        "description": "Rota responsável por buscar os personagens que correspondem ao nome enviado via query params",
+        "tags": ["Characters"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "name",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -202,6 +354,26 @@
             "type": "string"
           },
           "imageUrl": {
+            "type": "string"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "photo": {
             "type": "string"
           }
         }
